# ripfy-server

./: .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  dev.sh  docker-compose.yml  run.sh
.github/workflows/: main.yml
dev_utils/: Cargo.toml
dev_utils/src/: lib.rs  util.rs
entity/: Cargo.toml
entity/src/: lib.rs  playlist.rs  playlist_song.rs  prelude.rs  song.rs  user.rs  user_song.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230920_191630_create_song_table.rs  m20231008_182809_create_user.rs  m20231027_000833_create_user_song.rs  m20231219_224941_create_playlist_tables.rs
src/: _dev.rs  conf.rs  context.rs  db.rs  lib.rs  main.rs
src/api/: auth.rs  error.rs  mod.rs  playlist.rs  song.rs  stream.rs
src/api/mw/: ctx.rs  mod.rs
src/api/payloads/: auth.rs  mod.rs  playlist.rs  song.rs
src/crypt/: b64.rs  error.rs  gen_key.rs  mod.rs  passwd.rs  tests.rs  token.rs
src/db/: mod.rs  playlist.rs  song.rs  user.rs
src/db/junctions/: mod.rs  playlist_song.rs  user_song.rs
src/helpers/: user.rs
src/middleware/: auth.rs  cookies.rs  error.rs  mod.rs
src/mw/: mod.rs
src/routes/: auth.rs  error.rs  login.rs  mod.rs
src/routes/mw/: auth.rs  cookies.rs  ctx.rs  mod.rs
src/util/: error.rs  link.rs  mod.rs  redis.rs  tests.rs  time.rs  yt_dlp.rs
tests/: auth.rs  auth_permissions.rs  client_mock.rs  crypt.rs  passwd_encryption.rs  playlist.rs  regex.rs  signature_check.rs  song.rs  song_exclusivity.rs  song_existance.rs  yt_dlp.rs
