[package]
name = "ripfy-server"
default-run = "ripfy-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration", "dev_utils"]

[workspace.dependencies]
sea-orm = { version = "0.12.15", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"
migration = { path = "migration" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.5"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }

[dependencies]
axum = { workspace = true }
entity = { path = "entity" }
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.80"
figment = { version = "0.10.18", features = ["toml", "env"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.116"
strum_macros = "0.26.2"
tokio = { workspace = true }
thiserror = "1.0.59"
tower-http = { version = "0.5.2", features = ["fs"] }
uuid = { version = "1.8.0", features = ["v4", "v7", "fast-rng"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
migration = { workspace = true }
base64 = "0.22.1"
time = "0.3.36"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
lazy-regex = "3.1.0"
tower = "0.4.13"
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipauto = { version = "0.1.10", features = ["generic_full_path"] }
axum-auth = "0.7.0"
redis = { workspace = true }

[dev-dependencies]
dev_utils = { path = "dev_utils" }
httpc-test = { version = "0.1.9" }

[patch.crates-io]
httpc-test = { git = "https://github.com/Luks17/rust-httpc-test.git", branch = "auth-header" }
